[package]
name = "toql_rocket"
version = "0.3.0"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Rocket integration for toql"
keywords = ["toql", "rocket"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql_rocket"

[dependencies]
toql = { git = "https://github.com/roy-ganz/toql"}
toql_mysql_async = { git = "https://github.com/roy-ganz/toql_mysql_async", optional=true}
rocket = "0.5.0-rc.1"
log = "0.4"

[features]
mysql = ["toql_mysql_async"]


[dev-dependencies]
rocket = "0.5.0-rc.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[example]]
name = "crud_mysql"
path = "examples/crud_mysql/main.rs"
required-features = ["mysql14"]



 
