[package]
name = "toql_rocket"
version = "0.4.0"
authors = ["Roy Ganz <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Rocket integration for Toql"
keywords = ["toql", "rocket"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql_rocket"

[dependencies]
toql = { version="0.3", git = "https://github.com/roy-ganz/toql"}
rocket = "0.5.0-rc.1"
log = "0.4"






 
